--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,5 @@
 {% extends 'layout.html' %} {% block body %}
-
-<P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, fugiat unde saepe cum totam ex dolor recusandae magni
+<div class="container"><P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, fugiat unde saepe cum totam ex dolor recusandae magni
     impedit excepturi, atque obcaecati quibusdam veritatis! Blanditiis, dolore unde? Ipsum ullam doloribus omnis porro
     nam blanditiis deleniti natus laborum ex cumque ad beatae error sed veniam, voluptates, ut nisi? Minus expedita, ab
     sunt saepe et molestias provident cupiditate facilis quaerat at! Minima dolore porro exercitationem, obcaecati modi
@@ -134,4 +133,5 @@
     recusandae adipisci cumque illum numquam doloribus consequatur sit. Nam magnam, vitae illum ducimus sequi eius omnis
     aliquam animi, nulla porro saepe fugiat, maxime eaque voluptas ad! Fuga labore sequi minus repudiandae voluptates
     porro eveniet quae quam officia. Nihil veritatis magnam modi. Voluptatem!</P>
+</div>
 {%endblock%}
