--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,8 @@
                                 Galerias
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item custom-text" href="#">Galeria 1</a></li>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_1') }}">Galeria 1</a>
+                                </li>
                                 <li><a class="dropdown-item custom-text" href="#">Galeria 2</a></li>
                                 <li><a class="dropdown-item custom-text" href="#">Galeria 3</a></li>
                             </ul>
@@ -49,10 +50,14 @@
     </header>
     <main>
         {% block body %} {% endblock %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
+
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
