--- a/templates/galeria_1.html
+++ b/templates/galeria_1.html
@@ -10,12 +10,35 @@
         <img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}">
     {% endfor %}
 </div>-->
+<div class="container mx-auto">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{{ url_for('static', filename='images/' + imagenes[0]) }}" class="d-block w-100" alt="...">
+            </div>
+            {% for imagen in imagenes %}
+            <div class="carousel-item">
+                <img src="{{ url_for('static', filename='images/' + imagen) }}" class="d-block w-100" alt="...">
+            </div>
+            {% endfor %}
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>    
+</div>
+<!--
 <div id="imagenCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         {% for imagen in imagenes %}
-            <div class="carousel-item {% if loop.index == 1 %}active{% endif %}">
-                <img src="{{ url_for('static', filename='images/' + imagen) }}" class="d-block w-100" alt="{{ imagen }}">
-            </div>
+        <div class="carousel-item {% if loop.index == 1 %}active{% endif %}">
+            <img src="{{ url_for('static', filename='images/' + imagen) }}" class="d-block w-100" alt="{{ imagen }}">
+        </div>
         {% endfor %}
     </div>
     <a class="carousel-control-prev" href="#imagenCarousel" role="button" data-slide="prev">
@@ -26,5 +49,5 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Siguiente</span>
     </a>
-</div>
+</div>-->
 {%endblock%}
