--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,5 @@
 body, html {
+    font-family: "Sukhumvit Set", sans-serif;
     height: 100%;
     margin: 0;
     display: flex;
@@ -9,8 +10,8 @@ body, html {
 }
 
 h2{
+    font-family: "Sukhumvit Set", sans-serif;
     color: darkorange;
-    font-weight: bold;
 }
 
 .container {
