--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/sukhumvitset-thin.ttf') }}" />
 </head>
 
 <body>
     <div class="container mx-auto text-center">
         <div class="row">
             <div >
-                <h2>BT PHOTO</h2>
+                <h2>BT PHOTO Sukhumvit Set Thin</h2>
             </div>
             <div class="row">
                 <div>
