--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/sukhumvitset-thin.ttf') }}" />
 </head>
 
 <body>
@@ -39,8 +40,10 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_1') }}">Galeria 1</a>
                                 </li>
-                                <li><a class="dropdown-item custom-text" href="#">Galeria 2</a></li>
-                                <li><a class="dropdown-item custom-text" href="#">Galeria 3</a></li>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_2') }}">Galeria 2</a>
+                                </li>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_3') }}">Galeria 3</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
