--- a/templates/galeria_2.html
+++ b/templates/galeria_2.html
@@ -16,14 +16,16 @@
                 {% for imagen in imagenes %}
                 <!--<img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}">-->
                 <div class="card">
-                    <img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}" class="card-img-top" alt="...">
+                    <img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}"
+                        class="card-img-top" alt="...">
                     <!--<div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                     </div>-->
                 </div>
                 {% endfor %}
-            </div>        </div>
+            </div>
+        </div>
     </div>
 </div>
 {%endblock%}
