--- a/static/css/galeria_2.css
+++ b/static/css/galeria_2.css
@@ -1,7 +1,8 @@
 .col {
     text-align: center;
 }
-h1{
+
+h1 {
     color: #000000;
 }
 
@@ -14,42 +15,43 @@ h1{
 }
 
 .galeria .card {
-    background-color: #333;
+    background-color: rgb(44, 44, 44);
     color: #fff;
     width: calc(33.33% - 5px);
     margin-bottom: 5px;
-    box-sizing: border-box;
-    border-color: #1f1e1e;
+    /*box-sizing: border-box;*/
+    /*border-color: #1f1e1e;*/
     border-radius: 8px;
     padding: 5px;
-    overflow: hidden; /* Para que las esquinas redondeadas se apliquen correctamente */
+    /*overflow: hidden;*
+    /* Para que las esquinas redondeadas se apliquen correctamente */
     position: relative;
-    box-shadow: 0 4px 8px rgb(0, 0, 0);
-    transition: box-shadow 0.3s ease; /* Transición suave para el efecto de sombra */
-}
-.galeria .card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); /* Efecto de sombra al pasar el ratón */
-    /*transform: scale(1.1); /* Efecto de escala al pasar el ratón */
-
+    /*box-shadow: 0 4px 8px rgb(0, 0, 0);
+    transition: box-shadow 0.3s ease;
+    /* Transición suave para el efecto de sombra */
 }
 
-.galeria .card  img {
+.galeria .card img {
     width: 80%;
     border-radius: 8px;
-    transition: transform 0.3s ease; /* Transición suave para el efecto de escala */
+    transition: transform 0.3s ease;
+    /* Transición suave para el efecto de escala */
 }
+
 .galeria .card:hover img {
-    transform: scale(1.1); /* Efecto de escala al pasar el ratón */
+    transform: scale(1.1);
+    /* Efecto de escala al pasar el ratón */
 }
 
 .card-body {
     padding: 10px;
-    background-color: #474747;
+    background-color: rgb(44, 44, 44);
     border-radius: 6px;
 }
-.card-text{
+
+.card-text {
     color: #000000;
-    font-weight:100;
+    font-weight: 100;
 }
 
 .card-img-top {
@@ -57,9 +59,11 @@ h1{
     display: block;
 }
 
+
 /* Agrega estilos para el modal */
+
 .modal {
-    display:flex;
+    display: flex;
     position: fixed;
     z-index: 1;
     padding-top: 50px;
@@ -73,9 +77,9 @@ h1{
 
 .modal-content {
     margin: auto;
-    display:block;
+    display: block;
     max-width: 60%;
-    max-height:fit-content;
+    max-height: fit-content;
 }
 
 .close {
