--- a/templates/galeria_2.html
+++ b/templates/galeria_2.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='css/galeria_2.css') }}">
-{% extends 'layout.html' %} {% block body %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/galeria_2.css') }}"> {% extends 'layout.html' %} {% block body %}
 <br>
 <br>
 <br>
@@ -8,7 +7,6 @@
     <div class="row">
         <div class="col">
             <H1>Galeria 2</H1>
-            H1
         </div>
     </div>
     <div class="row justify-content-center align-items-center">
@@ -16,9 +14,8 @@
             <div class="galeria">
                 {% for imagen in imagenes %}
                 <!--<img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}">-->
-                <div class="card" onclick="abrirModal('{{ url_for('static', filename = 'images/' + imagen) }}','{{ imagen }}')" >
-                    <img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}"
-                        class="card-img-top" alt="...">
+                <div class="card" onclick="abrirModal('{{ url_for('static', filename = 'images/' + imagen) }}','{{ imagen }}')">
+                    <img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}" class="card-img-top" alt="...">
                     <!--<div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
