--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BTPHOTO</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/sukhumvitset-thin.ttf') }}" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -17,9 +16,7 @@
         <nav class="navbar navbar-expand-lg custom-navbar fixed-top border-bottom">
             <div class="container-fluid">
                 <a class="navbar-brand custom-text" href="#">BT Photo</a>
-                <button class="navbar-toggler custom-bg" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler custom-bg" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon custom-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -34,16 +31,19 @@
                             <a class="nav-link custom-text" href="{{ url_for('contacto') }}">Contacto</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle  custom-text" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle  custom-text" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Galerias
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_1') }}">Galeria 1</a>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_1') }}">Nocturnas Urbanas</a>
                                 </li>
-                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_2') }}">Galeria 2</a>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_2') }}">Hibridos</a>
                                 </li>
-                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_3') }}">Galeria 3</a>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_3') }}">Nocturnas Urbanas</a>
+                                </li>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_4') }}">Viajeros del Aire</a>
+                                </li>
+                                <li><a class="dropdown-item custom-text" href="{{ url_for('galeria_5') }}">Muro Horizontal (pisos)</a>
                                 </li>
                             </ul>
                         </li>
@@ -56,12 +56,8 @@
         {% block body %} {% endblock %}
 
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 </body>
 
 </html>
