--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/sukhumvitset-thin.ttf') }}" />
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/sukhumvitset-thin.ttf') }}" />
 </head>
 
 <body>
