--- a/templates/galeria_2.html
+++ b/templates/galeria_2.html
@@ -14,8 +14,8 @@
             <div class="galeria">
                 {% for imagen in imagenes %}
                 <!--<img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}">-->
-                <div class="card" onclick="abrirModal('{{ url_for('static', filename = 'images/' + imagen) }}','{{ imagen }}')">
-                    <img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}" class="card-img-top" alt="...">
+                <div class="card" onclick="abrirModal('{{ url_for('static', filename = 'images/galeria2/' + imagen) }}','{{ imagen }}')">
+                    <img src="{{ url_for('static', filename='images/galeria2/' + imagen) }}" alt="{{ imagen }}" class="card-img-top" alt="...">
                     <!--<div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
