--- a/templates/galeria_3.html
+++ b/templates/galeria_3.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='css/galeria_3.css') }}">
-{% extends 'layout.html' %} {% block body %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/galeria_4.css') }}"> {% extends 'layout.html' %} {% block body %}
 <br>
 <br>
 <br>
@@ -12,29 +11,41 @@
     </div>
     <div class="row justify-content-center align-items-center">
         <div class="col-md-10">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active align-items-center">
-                        <img src="{{ url_for('static', filename='images/' + imagenes[0]) }}" class="d-block mx-auto" alt="...">
-                    </div>
-                    {% for imagen in imagenes %}
-                    <div class="carousel-item align-items-center">
-                        <img src="{{ url_for('static', filename='images/' + imagen) }}" class="d-block mx-auto" alt="...">
-                    </div>
-                    {% endfor %}
+            <div class="galeria">
+                {% for imagen in imagenes %}
+                <!--<img src="{{ url_for('static', filename='images/' + imagen) }}" alt="{{ imagen }}">-->
+                <div class="card" onclick="abrirModal('{{ url_for('static', filename = 'images/galeria3/' + imagen) }}','{{ imagen }}')">
+                    <img src="{{ url_for('static', filename='images/galeria3/' + imagen) }}" alt="{{ imagen }}" class="card-img-top" alt="...">
+                    <!--<div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>-->
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                {% endfor %}
             </div>
         </div>
     </div>
 </div>
+<!-- Modal -->
+<div class="modal" id="myModal">
+    <span class="close" onclick="cerrarModal()">&times;</span>
+    <img class="modal-content" id="imgModal">
+    <div id="caption"></div>
+</div>
+
+<script>
+    function abrirModal(url, nombre) {
+        var modal = document.getElementById('myModal');
+        var img = document.getElementById('imgModal');
+        var captionText = document.getElementById('caption');
+
+        modal.style.display = 'block';
+        img.src = url;
+        captionText.innerHTML = nombre;
+    }
+
+    function cerrarModal() {
+        document.getElementById('myModal').style.display = 'none';
+    }
+</script>
 {%endblock%}
