--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,4 +1,9 @@
-{% extends 'layout.html' %} {% block body %}
+{% extends 'layout.html' %}
+{% block head%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/contacto.css') }}">
+{%endblock%}
+{% block body %}
 <br>
 <br>
 <br>
