--- a/templates/galeria_5.html
+++ b/templates/galeria_5.html
@@ -28,9 +28,9 @@
     </div>
 </div>
 <!-- Modal -->
-<div class="modal" id="myModal">
+<div id="myModal">
     <span class="close" onclick="cerrarModal()">&times;</span>
-    <img class="modal-content" id="imgModal" src="" alt="Imagen ampliada">
+    <img  id="imgModal" src="" alt="Imagen ampliada">
     <div id="caption"></div>
 </div>
 
