--- a/templates/galeria_3.html
+++ b/templates/galeria_3.html
@@ -28,12 +28,11 @@
     </div>
 </div>
 <!-- Modal -->
-<div class="modal" id="myModal">
+<div id="myModal">
     <span class="close" onclick="cerrarModal()">&times;</span>
-    <img class="modal-content" id="imgModal" src="" alt="Imagen ampliada">
+    <img  id="imgModal" src="" alt="Imagen ampliada">
     <div id="caption"></div>
 </div>
-
 <script>
     function abrirModal(url, nombre) {
         var modal = document.getElementById('myModal');
