--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,14 @@
 {%endblock%}
 
 {% block body %}
-<div class="container"><P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, fugiat unde saepe cum totam ex dolor recusandae magni
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+    
+    <h1>Home</h1>
+    <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, fugiat unde saepe cum totam ex dolor recusandae magni
     impedit excepturi, atque obcaecati quibusdam veritatis! Blanditiis, dolore unde? Ipsum ullam doloribus omnis porro
     nam blanditiis deleniti natus laborum ex cumque ad beatae error sed veniam, voluptates, ut nisi? Minus expedita, ab
     sunt saepe et molestias provident cupiditate facilis quaerat at! Minima dolore porro exercitationem, obcaecati modi
