--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layout_galeria.html' %}
 {% block head%}
     {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/contacto.css') }}">
@@ -8,5 +8,5 @@
 <br>
 <br>
 <br>
-<H1>CONTACTO</H1>
+<H1 id="tituloGaleria">CONTACTO</H1>
 {%endblock%}
