--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class="container mx-auto text-center">
         <div class="row">
             <div >
-                <h2>BT PHOTO Sukhumvit Set Thin</h2>
+                <h1 id="tituloGaleria">BT PHOTO</h1>
             </div>
             <div class="row">
                 <div>
