--- a/templates/galeria_1.html
+++ b/templates/galeria_1.html
@@ -1,7 +1,7 @@
 {% extends 'layout_galeria.html' %}
 {% block head%}
     {{ super() }}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/galeria_1.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/galerias.css') }}">
 {%endblock%}
 
 {% block body %}
